Change license to CC0 and add temporary introduction

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,10 @@
 site_name: 博慎的數位花園
-site_url: https://www.marvin-elsen.com/garden
-site_description: Todo
+site_url: https://www.marvin-elsen.com
+site_description: Marvin Elsen is a passionate German software engineer and InfoSec-enthusiast. Empowering people through exceptional, great-looking and secure software is what drives him to become his greatest version.
+# keywords: Marvin Elsen, Marvin, Elsen, Germany, Trier, software developer, developer, software engineer, UX, user experience, user interface, usability, InfoSec, NetSec, IT security, security, information security, cryptography, data protection, data privacy, privacy, Java, Java 11, Python, Kotlin, Android, mobile development, mobile, app development, programming, coding
 site_author: Marvin Elsen
-copyright: Copyright &copy; 2020 Marvin Elsen
+# copyright: Copyright &copy; 2020 Marvin Elsen
+copyright: "<a rel=\"license\" href=\"http://creativecommons.org/publicdomain/zero/1.0/\"> <img src=\"https://licensebuttons.net/p/zero/1.0/80x15.png\" style=\"border-style: none;\" alt=\"CC0\" /> </a><br>To the extent possible under law, Marvin Elsen has waived all copyright and related or neighboring rights to the written content of this website"
 docs_dir: vimwiki
 site_dir: site
 repo_url: https://github.com/elsenm/digital-garden
