--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,15 +3,16 @@ site_url: https://www.marvin-elsen.com
 site_description: Marvin Elsen is a passionate German software engineer and InfoSec-enthusiast. Empowering people through exceptional, great-looking and secure software is what drives him to become his greatest version.
 # keywords: Marvin Elsen, Marvin, Elsen, Germany, Trier, software developer, developer, software engineer, UX, user experience, user interface, usability, InfoSec, NetSec, IT security, security, information security, cryptography, data protection, data privacy, privacy, Java, Java 11, Python, Kotlin, Android, mobile development, mobile, app development, programming, coding
 site_author: Marvin Elsen
-# copyright: Copyright &copy; 2020 Marvin Elsen
-copyright: "<a rel=\"license\" href=\"http://creativecommons.org/publicdomain/zero/1.0/\"> <img src=\"https://licensebuttons.net/p/zero/1.0/80x15.png\" style=\"border-style: none;\" alt=\"CC0\" /> </a><br>To the extent possible under law, Marvin Elsen has waived all copyright and related or neighboring rights to the written content of this website"
+copyright: 2020, Marvin Elsen. <a href="https://creativecommons.org/publicdomain/zero/1.0/" target="_blank">No rights reserved.</a>
 docs_dir: vimwiki
 site_dir: site
 repo_url: https://github.com/elsenm/digital-garden
 repo_name: elsenm/digital-garden
 edit_uri: ""
 nav:
-    - Introduction: index.md
+    - Home:
+        - Introduction: index.md
+        - License: license.md
     - Software:
         - Toolbox: toolbox.md
 theme:
@@ -50,6 +51,10 @@ markdown_extensions:
     - pymdownx.superfences
 extra:
   social:
+    - icon: fontawesome/brands/creative-commons-zero
+      link: https://creativecommons.org/publicdomain/zero/1.0/
+      name: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
+
     - icon: fontawesome/solid/paper-plane
       link: mailto:contact@marvin-elsen.com
       name: Send me an eMail
