--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,6 +62,7 @@ markdown_extensions:
     - pymdownx.inlinehilite
     - pymdownx.keys
     - pymdownx.superfences
+    - pymdownx.tabbed
 extra:
   social:
     - icon: fontawesome/brands/creative-commons-zero
