--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,6 +45,9 @@ plugins:
     - minify:
         minify_html: true
     - git-revision-date
+    - exclude:
+        glob:
+            - main.md
 markdown_extensions:
     - meta
     - toc:
