--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,6 @@
 site_name: 博慎的數位花園
 site_url: https://www.marvin-elsen.com
 site_description: Marvin Elsen is a passionate German software engineer and InfoSec-enthusiast. Empowering people through exceptional, great-looking and secure software is what drives him to become his greatest version.
-keywords: marvin elsen, marvin, elsen, digital garden, wiki, personal wiki, knowledge base
 site_author: Marvin Elsen
 copyright: 2020, Marvin Elsen. <a href="https://creativecommons.org/publicdomain/zero/1.0/" target="_blank">No rights reserved.</a>
 docs_dir: vimwiki
@@ -32,8 +31,8 @@ theme:
         logo: fontawesome/solid/seedling
         repo: fontawesome/brands/github-alt
     features:
-        - instant
-        - tabs
+        - navigation.instant
+        - navigation.tabs
     palette:
         scheme: digital-garden
     font: false
