--- a/requirements.txt
+++ b/requirements.txt
@@ -12,18 +12,20 @@ lunr==0.5.8
 Markdown==3.2.2
 MarkupSafe==1.1.1
 mkdocs==1.1.2
+mkdocs-exclude==1.0.2
 mkdocs-git-revision-date-plugin==0.3
-mkdocs-material==5.5.14
+mkdocs-material==6.0.1
 mkdocs-material-extensions==1.0.1
 mkdocs-minify-plugin==0.3.0
+mkdocs-simple-hooks==0.1.1
 nltk==3.5
 pkg-resources==0.0.0
 Pygments==2.7.1
-pymdown-extensions==8.0
+pymdown-extensions==8.0.1
 PyYAML==5.3.1
-regex==2020.7.14
+regex==2020.9.27
 six==1.15.0
 smmap==3.0.4
 tornado==6.0.4
-tqdm==4.49.0
+tqdm==4.50.0
 zipp==3.2.0
