--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,12 +15,14 @@ nav:
         - Disclaimer: disclaimer.md
         - License: license.md
     - Chinese:
-        - Grammar: grammar.md
         - Anki: anki.md
-        - Pleco: pleco.md
+    - Programming:
+        - Python: python.md
+        - Minecraft Modding: minecraft_modding.md
     - Software:
         - Toolbox: toolbox.md
         - SSH: ssh.md
+        - Git: git.md
         - Java Web Start: java_web_start.md
         - Adblock: adblock.md
         - Website: website.md
