Flatten index navigation hierarchy for a better user experience on mobile

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,11 +9,10 @@ repo_url: https://github.com/elsenm/digital-garden
 repo_name: elsenm/digital-garden
 edit_uri: ""
 nav:
-    - Home:
-        - Introduction: index.md
-        - Contact: contact.md
-        - Disclaimer: disclaimer.md
-        - License: license.md
+    - Meta: index.md
+    - Contact: contact.md
+    - Disclaimer: disclaimer.md
+    - License: license.md
     - Chinese:
         - Anki: anki.md
     - Programming:
