--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Markdown==3.2.2
 MarkupSafe==1.1.1
 mkdocs==1.1.2
 mkdocs-exclude==1.0.2
+mkdocs-git-authors-plugin==0.3.2
 mkdocs-git-revision-date-plugin==0.3
 mkdocs-material==6.0.1
 mkdocs-material-extensions==1.0.1
