--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,31 @@
 click==7.1.2
 future==0.18.2
 gitdb==4.0.5
-GitPython==3.1.8
+GitPython==3.1.12
 htmlmin==0.1.12
-importlib-metadata==2.0.0
+importlib-metadata==3.4.0
 Jinja2==2.11.2
-joblib==0.16.0
+joblib==1.0.0
 jsmin==2.2.2
 livereload==2.6.3
 lunr==0.5.8
-Markdown==3.2.2
+Markdown==3.3.3
 MarkupSafe==1.1.1
 mkdocs==1.1.2
 mkdocs-exclude==1.0.2
-mkdocs-git-authors-plugin==0.3.2
-mkdocs-git-revision-date-plugin==0.3
-mkdocs-material==6.0.1
+mkdocs-git-revision-date-plugin==0.3.1
+mkdocs-material==6.2.4
 mkdocs-material-extensions==1.0.1
 mkdocs-minify-plugin==0.3.0
-mkdocs-simple-hooks==0.1.1
 nltk==3.5
 pkg-resources==0.0.0
-Pygments==2.7.1
-pymdown-extensions==8.0.1
+Pygments==2.7.4
+pymdown-extensions==8.1
 PyYAML==5.3.1
-regex==2020.9.27
+regex==2020.11.13
 six==1.15.0
 smmap==3.0.4
-tornado==6.0.4
-tqdm==4.50.0
-zipp==3.2.0
+tornado==6.1
+tqdm==4.56.0
+typing-extensions==3.7.4.3
+zipp==3.4.0
