Add initial version of tea FAQ

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,8 @@ nav:
         - License: license.md
     - Chinese:
         - Anki: chinese/anki.md
+    - Tea:
+        FAQ: tea/faq.md
     - Programming:
         - Python:
             - Project Setup: programming/python/project_setup.md
