--- a/requirements.txt
+++ b/requirements.txt
@@ -27,14 +27,17 @@ mkdocs-redirects==1.0.1
 mkdocs-rss-plugin==0.12.0
 mkdocs-section-index==0.2.3
 nltk==3.5
+pip==21.0.1
 Pygments==2.7.4
 pymdown-extensions==8.1
 python-dateutil==2.8.1
 pytz==2020.5
 PyYAML==5.4.1
 regex==2020.11.13
+setuptools==53.0.0
 six==1.15.0
 smmap==3.0.5
 termcolor==1.1.0
 tornado==6.1
 tqdm==4.56.0
+wheel==0.36.2
