--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 Babel==2.9.0
 click==7.1.2
+dataclasses==0.7
 future==0.18.2
 gitdb==4.0.5
 GitPython==3.1.12
 glob2==0.7
 htmlmin==0.1.12
+importlib-metadata==3.7.3
 Jinja2==2.11.2
 joblib==1.0.0
 jsmin==2.2.2
@@ -17,19 +19,20 @@ mkdocs-exclude==1.0.2
 mkdocs-git-authors-plugin==0.3.3
 mkdocs-git-revision-date-localized-plugin==0.8
 mkdocs-literate-nav==0.3.0
-mkdocs-macros-plugin==0.5.0
+mkdocs-macros-plugin==0.5.5
 mkdocs-macros-test==0.1.0
-mkdocs-material==6.2.5
+mkdocs-material==7.0.6
 mkdocs-material-extensions==1.0.1
 mkdocs-minify-plugin==0.4.0
-mkdocs-print-site-plugin==1.0.0
+mkdocs-print-site-plugin==1.1.0
 mkdocs-redirects==1.0.1
-mkdocs-rss-plugin==0.12.0
+mkdocs-rss-plugin==0.13.0
 mkdocs-section-index==0.2.3
 nltk==3.5
 pip==21.0.1
+pkg-resources==0.0.0
 Pygments==2.7.4
-pymdown-extensions==8.1
+pymdown-extensions==8.1.1
 python-dateutil==2.8.1
 pytz==2020.5
 PyYAML==5.4.1
@@ -40,4 +43,6 @@ smmap==3.0.5
 termcolor==1.1.0
 tornado==6.1
 tqdm==4.56.0
+typing-extensions==3.7.4.3
 wheel==0.36.2
+zipp==3.4.1
