--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,7 @@ extra_css:
     - assets/stylesheets/extra.css
 plugins:
     - search
+    - table-reader
     - macros
     - minify:
         minify_html: true
@@ -66,6 +67,7 @@ markdown_extensions:
     - pymdownx.keys
     - pymdownx.superfences
     - pymdownx.tabbed
+    - pymdownx.tasklist
 extra:
   manifest: assets/manifest.webmanifest
   social:
