--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,7 +11,7 @@ edit_uri: ""
 theme:
     name: material
     custom_dir: overrides
-    favicon: assets/images/favicon.svg
+    favicon: /assets/images/favicon.svg
     icon:
         logo: fontawesome/solid/seedling
         repo: fontawesome/brands/github-alt
@@ -25,7 +25,7 @@ theme:
     font: false
     language: en
 extra_css:
-    - assets/stylesheets/extra.css
+    - /assets/stylesheets/extra.css
 plugins:
     - search
     - table-reader
@@ -69,7 +69,7 @@ markdown_extensions:
     - pymdownx.tabbed
     - pymdownx.tasklist
 extra:
-  manifest: assets/manifest.webmanifest
+  manifest: /assets/manifest.webmanifest
   social:
     - icon: fontawesome/brands/creative-commons-zero
       link: https://creativecommons.org/publicdomain/zero/1.0/
